--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 
           clicked = true;
 
-            alert('点击位置经度：' + e.latlng.lng + ',纬度：' + e.latlng.lat);
+            alert('选择地点');
+            console.log('点击位置经度：' + e.latlng.lng + ',纬度：' + e.latlng.lat);
 
 
             //公交方案
